--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,14 +12,20 @@ server.session.persistent=false
 
 
 # H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
 # Datasource
-spring.datasource.url=jdbc:h2:file:~/test
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:h2:file:~/test
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/gandhi?useSSL=false
+spring.datasource.username = sae
+#spring.datasource.password = 4ppSAE2oi7.
+spring.datasource.password = sae
+
 
 #Upload image
 spring.servlet.multipart.enabled=false
