--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>sae-ui</artifactId>
 	<name>sae-ui</name>
 	<version>2.0</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -15,7 +15,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<!-- Dependencies -->
-		<vaadin.version>12.0.1</vaadin.version>
+		<!-- <vaadin.version>12.0.1</vaadin.version> -->
+		<vaadin.version>13.0.6</vaadin.version>
 	</properties>
 
 	<parent>
@@ -136,6 +137,17 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
+		<!-- Spring security -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-web</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-config</artifactId>
+		</dependency>
+        
 	</dependencies>
 
 	<build>
