--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,23 @@
     		<version>5.5.3</version>
 		</dependency>
         
+        <!-- Charts.js -->
+        <dependency>
+			<groupId>org.webjars.bowergithub.chartjs</groupId>
+			<artifactId>chart.js</artifactId>
+			<version>2.7.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars.bowergithub.moment</groupId>
+			<artifactId>moment</artifactId>
+			<version>2.23.0</version>
+		</dependency>
+		<dependency>
+			<groupId>be.ceau</groupId>
+			<artifactId>chart</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+        
 	</dependencies>
 
 	<build>
