--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<!-- Dependencies -->
 		<!-- <vaadin.version>12.0.1</vaadin.version> -->
 		<vaadin.version>13.0.6</vaadin.version>
+		<!-- <vaadin.version>14.0.0</vaadin.version> -->
 	</properties>
 
 	<parent>
@@ -71,13 +72,13 @@
 			<optional>true</optional>
 		</dependency>
 
-
+<!--
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>docs-helpers</artifactId>
 			<version>1.1-SNAPSHOT</version>
 		</dependency>
-
+-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
