Reslver incidencia de actualización de conceptos de pago

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ server.session.persistent=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/gandhi?useSSL=false
 spring.datasource.username = sae
-#spring.datasource.password = 4ppSAE2oi7.
-spring.datasource.password = sae
+spring.datasource.password = 4ppSAE2oi7.
+#spring.datasource.password = sae
 #spring.datasource.jndi-name=jdbc/sar
 
 #Upload image
