--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,12 +21,12 @@ server.session.persistent=false
 #spring.datasource.driver-class-name=org.h2.Driver
 #spring.jpa.show-sql=true
 #############################################
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/gandhi?useSSL=false
-spring.datasource.username = sae
-spring.datasource.password = 4ppSAE2oi7.
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url = jdbc:mysql://localhost:3306/gandhi?useSSL=false
+#spring.datasource.username = sae
+#spring.datasource.password = 4ppSAE2oi7.
 #spring.datasource.password = sae
-#spring.datasource.jndi-name=jdbc/sar
+spring.datasource.jndi-name=jdbc/sar
 
 #Upload image
 spring.servlet.multipart.enabled=false
